// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/presenters/NotificationPresenter renders with all props 1`] = `
.emotion-6 {
  position: relative;
  overflow: hidden;
  -webkit-transition-property: height,opacity;
  transition-property: height,opacity;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.emotion-6:last-child {
  border-bottom: none;
}

.emotion-4 {
  margin: 12px;
  word-wrap: break-word;
  overflow: hidden;
}

.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

.emotion-0 a:hover {
  color: #006eaf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006eaf;
  text-decoration-color: #006eaf;
}

.emotion-0 a:focus {
  color: #006eaf;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid rgba(60,60,60,0.25);
  border-left: 3px solid #bec8d2;
  border-left-color: #6a9728;
}

.emotion-3 {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
}

.emotion-2 {
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
}

.emotion-2 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-1 {
  fill: #808080;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-1 > * {
  fill: #808080;
}

<div
  className="emotion-6"
  role="listitem"
  style={
    Object {
      "height": "3000px",
    }
  }
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-0"
      >
        foobar
      </div>
      2018-08-17
      <div
        className="emotion-3"
      >
        <button
          className="emotion-2"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          tabIndex="0"
          title="hello world"
        >
          <svg
            className="emotion-1"
            height="16px"
            width="16px"
          >
            <path
              d="M13.4 3.4l-.8-.8L8 7.3 3.4 2.6l-.8.8L7.3 8l-4.7 4.6.8.8L8 8.7l4.6 4.7.8-.8L8.7 8l4.7-4.6z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/presenters/NotificationPresenter renders without props 1`] = `
.emotion-3 {
  position: relative;
  overflow: hidden;
  -webkit-transition-property: height,opacity;
  transition-property: height,opacity;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.emotion-3:last-child {
  border-bottom: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid rgba(60,60,60,0.25);
  border-left: 3px solid #bec8d2;
  border-left-color: rgba(128,128,128,0.4);
}

.emotion-1 {
  margin: 12px;
  word-wrap: break-word;
  overflow: hidden;
}

.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

.emotion-0 a:hover {
  color: #006eaf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006eaf;
  text-decoration-color: #006eaf;
}

.emotion-0 a:focus {
  color: #006eaf;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-3"
  role="listitem"
  style={
    Object {
      "height": undefined,
    }
  }
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-0"
      />
    </div>
  </div>
</div>
`;
